<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ImeiAndMeidSettings</string>
    <string name="setting_imei">"IMEI Setting"</string>
    <string name="setting_meid">"MEID Setting"</string>

    <string name="sim1_imei">"SIM1 IMEI:"</string>
    <string name="sim2_imei">"SIM2 IMEI:"</string>
    <string name="meid">"MEID:"</string>
    <string name="setting">Setting</string>
    <string name="imei_and_meid_setting_title">Setting IMEI and MEID</string>
    <string name="ok">OK</string>
    <string name="success">Set IMEI and MEID to succeed, please reboot your phone</string>
    <string name="fail">Set IMEI and MEID to failed, please reboot your phone</string>
    <string name="success_no_meid">Set IMEI to succeed, please reboot your phone</string>
    <string name="success_no_imei">Set MEID to succeed, please reboot your phone</string>
    <string name="fail_no_meid">Set IMEI to failed, please reboot your phone</string>
    <string name="fail_no_imei">Set MEID to failed, please reboot your phone</string>
    <string name="sim1_imei_length_limit_tip">SIM1 IMEI number must be equal to <xliff:g id="length">%d</xliff:g></string>
    <string name="sim2_imei_length_limit_tip">SIM2 IMEI number must be equal to <xliff:g id="length">%d</xliff:g></string>
    <string name="meid_length_limit_tip">MEID number must be equal to <xliff:g id="length">%d</xliff:g></string>
    <string name="sim1_imei_value_limit_tip">SIM1 IMEI number can not be <xliff:g id="length">%s</xliff:g></string>
    <string name="sim2_imei_value_limit_tip">SIM1 IMEI number can not be <xliff:g id="length">%s</xliff:g></string>
    <string name="meid_value_limit_tip">MEID number can not be <xliff:g id="length">%s</xliff:g></string>
    <string name="setting_dialog_msg">Writing, please wait ...</string>
    <string name="clear_nv">Clear NV</string>
    <string name="clear_success">Clear success</string>
    <string name="clear_fail">Clear fail</string>
    <string name="secret_code">1122</string>

</resources>
