<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_imei_and_meid_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/sim1_imei_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sim1_imei" />

        <EditText
            android:id="@+id/sim1_imei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:maxLength="@integer/sim1_imei_length" />

        <TextView
            android:id="@+id/sim2_imei_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sim2_imei" />

        <EditText
            android:id="@+id/sim2_imei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:maxLength="@integer/sim2_imei_length" />

        <TextView
            android:id="@+id/meid_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meid" />

        <EditText
            android:id="@+id/meid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890abcdefABCDEF"
            android:maxLength="@integer/meid_length" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_nv"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setting"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>